<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_layoutroot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/login_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="normal"
                tools:layout_editor_absoluteX="57dp"
                tools:layout_editor_absoluteY="145dp" />

            <EditText
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                android:ems="10"
                android:hint="@string/login_hint_name"
                android:inputType="textFilter"
                android:textSize="14sp"
                tools:layout_editor_absoluteY="170dp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/login_password"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="normal"
                tools:layout_editor_absoluteX="57dp"
                tools:layout_editor_absoluteY="213dp" />

            <EditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:textSize="14sp"
                tools:layout_editor_absoluteY="238dp"
                tools:targetApi="o" />

            <CheckBox
                android:id="@+id/cb_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_remember"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="287dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <Button
                android:id="@+id/btn_login"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:text="@string/login_login"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textColorLink="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/cb_remember"
                tools:layout_editor_absoluteX="28dp" />

            <Button
                android:id="@+id/btn_register"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:text="@string/login_register"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/cb_remember"
                tools:layout_editor_absoluteX="200dp" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>